# complex_sequences

./: .gitignore  Cargo.toml  GEMINI.md  README.md
resources/imgui-learning/: 00_README.md  01_basic_interactivity.md  01_basic_interactivity.rs
src/: main.rs
src/fractals/: divergence.rs  divergence_texture.rs  geometry.rs  methods.rs  mod.rs  root.rs  root_texture.rs  tables.rs  textures.rs  threading.rs
src/fractals/divergence/: app.rs  maths.rs  method.rs  mod.rs  texture.rs
src/fractals/root/: app.rs  maths.rs  method.rs  mod.rs  texture.rs
src/gui/: app.rs  color.rs  debug.rs  defaults.rs  grid.rs  inputs.rs  mod.rs  mouse.rs  settings.rs
src/structures/: color.rs  combos.rs  computations.rs  configuration.rs  mod.rs
src/support/: clipboard.rs  defaults.rs  initialization.rs  mod.rs  rendering.rs
