[package]
name = "fractals_detroix23"
version = "0.2.4"
edition = "2024"
description = "Graph complex sequences using Imgui."

[dependencies]
copypasta = "0.8"
glium = { version = "0.35.0", default-features = true }
image = "0.23"

imgui-glium-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glium-renderer" }
imgui = {  version = "0.12", git = "https://github.com/imgui-rs/imgui-rs", features = [
    "tables-api",
] }
imgui-winit-support = { version = "0.13", git = "https://github.com/imgui-rs/imgui-winit-support" }

complex = { version = "0.0.5", git = "https://github.com/Detroix23/complex_rust" }
